<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_margin="24dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_hindi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="हिन्दी"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_english"/>

    <Button
        android:id="@+id/btn_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="English"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toEndOf="@id/btn_hindi"
        app:layout_constraintEnd_toStartOf="@id/btn_french"/>

    <Button
        android:id="@+id/btn_french"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="française"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toEndOf="@id/btn_english"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/joke_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/joke_1"
        app:layout_constraintTop_toBottomOf="@id/btn_hindi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/joke_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/joke_2"
        app:layout_constraintTop_toBottomOf="@id/joke_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/joke_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/joke_3"
        app:layout_constraintTop_toBottomOf="@id/joke_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/joke_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/joke_4"
        app:layout_constraintTop_toBottomOf="@id/joke_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/joke_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/joke_4"
        app:layout_constraintTop_toBottomOf="@id/joke_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>